# vorsana

./: .gitignore  README.md  proyect.md
vorsana/: Cargo.toml  Dockerfile
vorsana/models/old_models/: ai_voice_detector.onnx
vorsana/models/old_models/spanish/: ai_voice_detector.onnx
vorsana/src/: audio.rs  main.rs  model.rs  server.rs
vorsana_ui/: package-lock.json  package.json
vorsana_ui/src/layouts/: Layout.astro
vorsana_ui/src/lib/: audioClient.ts
vorsana_ui/src/pages/: index.astro
vorsana_ui/src/styles/: global.css
