[package]
name = "vorsana"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime and network
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.10", features = ["cors"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Audio processing
rubato = "0.16.2"
rustfft = "6.2.0"
audioadapter = "0.2"

# Machine learning inference
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
ndarray = "0.15.0"

# Utilities
env_logger = "0.11.10"
log = "0.4.29"
num-complex = "0.4.4"
